✔ fixed video position / curtain on mobile

--- a/src/components/curtain/curtain.module.scss
+++ b/src/components/curtain/curtain.module.scss
@@ -5,7 +5,6 @@ html {
 .main {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   width: 100vw;
   height: 100vh;
   display: grid;
@@ -13,6 +12,7 @@ html {
   grid-template-columns: 1fr;
   z-index: 200;
   background-color: #2f388d;
+  overflow: hidden;
 
   canvas {
     animation: blendOut 2s ease-out;
@@ -220,7 +220,7 @@ html {
     transform: translate(0) rotate(0) scale(1, 1);
   }
   to {
-    transform: translate(-100%) rotate(20deg) scale(0, 2);
+    transform: translate(-150%) rotate(20deg) scale(0.5, 2);
   }
 }
 
@@ -230,7 +230,7 @@ html {
     transform: translate(0) rotate(0) scale(1, 1);
   }
   to {
-    transform: translate(-100%) rotate(20deg) scale(0, 2);
+    transform: translate(-150%) rotate(20deg) scale(0.5, 2);
   }
 }
 
@@ -240,7 +240,7 @@ html {
     transform: translate(0) rotate(0) scale(-1, 1);
   }
   to {
-    transform: translate(100%) rotate(-20deg) scale(0, 2);
+    transform: translate(150%) rotate(-20deg) scale(-0.5, 2);
   }
 }
 
